--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu site</title>
     <style>
       body {
@@ -22,10 +24,24 @@
         font-family: Arial, sans-serif;
         color: #f52c40;
         margin-bottom: 20px;
+        text-align: center;
       }
       p {
         font-family: Arial, sans-serif;
         color: #fff;
+        text-align: center;
+      }
+      @media (max-width: 768px) {
+        .main-container {
+          background-position: top;
+          text-align: center;
+        }
+        h1 {
+          font-size: 2rem;
+        }
+        p {
+          font-size: 1.2rem;
+        }
       }
     </style>
   </head>
