--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         color: #fff;
         text-align: center;
       }
+      iframe {
+        border: none;
+        margin-top: 20px;
+      }
       @media (max-width: 768px) {
         .main-container {
           background-position: top;
@@ -42,6 +46,10 @@
         p {
           font-size: 1.2rem;
         }
+        iframe {
+          width: 100%;
+          height: auto;
+        }
       }
     </style>
   </head>
@@ -49,6 +57,8 @@
     <div class="main-container">
       <h1>Oi gata linda beijos</h1>
       <p>Abner Lindo Ramos</p>
+      <!-- Player -->
+      <iframe name="Player" src="//%72%65%64%65%63%61%6E%61%69%73%74%76%2E%70%73/player3/ch.php?canal=bobonordeste" frameborder="0" height="400" width="640" scrolling="no" allow="encrypted-media" allowfullscreen></iframe>
     </div>
   </body>
 </html>
