--- a/index.html
+++ b/index.html
@@ -17,15 +17,13 @@
 
       iframe {
         border: none;
-        width: 100%;
-        height: 100%;
-        max-width: 800px; /* Limita a largura máxima */
-        max-height: 450px; /* Limita a altura máxima */
+        width: 1440px; /* Tamanho fixo para a largura do player */
+        height: 720px; /* Tamanho fixo para a altura do player */
       }
     </style>
   </head>
   <body>
-    <!-- Player -->
-    <iframe name="Player" src="//%72%65%64%65%63%61%6E%61%69%73%74%76%2E%70%73/player3/ch.php?canal=bobonordeste" allow="encrypted-media" allowfullscreen></iframe>
+    <!-- Player com tela cheia -->
+    <iframe name="Player" src="//%72%65%64%65%63%61%6E%61%69%73%74%76%2E%70%73/player3/ch.php?canal=bobonordeste" frameborder="0" allow="encrypted-media" allowfullscreen></iframe>
   </body>
 </html>
